# VCFX

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  DOCKER.md  Dockerfile  PUBLISHING.md  PUBLISHING_PYPI.md  PYPI_SETUP_GUIDE.md  README.md  TOOLS_TODO.md  add_vcfx_tools_to_path.sh  cat.sh  compile_wasm.sh  docker-compose.yml  docker_entrypoint.sh  index.html  meta.yaml  mkdocs.yml  requirements-dev.txt  ruff.toml  setup_vcfx.sh  sitemap.xml  src_dirs.txt
python/: CMakeLists.txt  README.md  __init__.py  bindings.cpp  pyproject.toml  results.py  setup.py  tools.py
python/tools/: analysis.py  filters.py
src/: CMakeLists.txt  cat.sh  first_20_directories_code.cpp  next_20_directories_code.cpp  remaining_directories_code.cpp  vcfx_core.cpp
src/VCFX_af_subsetter/: CMakeLists.txt  VCFX_af_subsetter.cpp  VCFX_af_subsetter.h
src/VCFX_alignment_checker/: CMakeLists.txt  VCFX_alignment_checker.cpp  VCFX_alignment_checker.h
src/VCFX_allele_balance_calc/: CMakeLists.txt  VCFX_allele_balance_calc.cpp  VCFX_allele_balance_calc.h
src/VCFX_allele_balance_filter/: CMakeLists.txt  VCFX_allele_balance_filter.cpp  VCFX_allele_balance_filter.h
src/VCFX_allele_counter/: CMakeLists.txt  VCFX_allele_counter.cpp  VCFX_allele_counter.h
src/VCFX_allele_freq_calc/: CMakeLists.txt  VCFX_allele_freq_calc.cpp  VCFX_allele_freq_calc.h
src/VCFX_ancestry_assigner/: CMakeLists.txt  VCFX_ancestry_assigner.cpp  VCFX_ancestry_assigner.h
src/VCFX_ancestry_inferrer/: CMakeLists.txt  VCFX_ancestry_inferrer.cpp  VCFX_ancestry_inferrer.h
src/VCFX_annotation_extractor/: CMakeLists.txt  VCFX_annotation_extractor.cpp  VCFX_annotation_extractor.h
src/VCFX_compressor/: CMakeLists.txt  VCFX_compressor.cpp  VCFX_compressor.h
src/VCFX_concordance_checker/: CMakeLists.txt  VCFX_concordance_checker.cpp  VCFX_concordance_checker.h
src/VCFX_cross_sample_concordance/: CMakeLists.txt  VCFX_cross_sample_concordance.cpp  VCFX_cross_sample_concordance.h
src/VCFX_custom_annotator/: CMakeLists.txt  VCFX_custom_annotator.cpp  VCFX_custom_annotator.h
src/VCFX_diff_tool/: CMakeLists.txt  VCFX_diff_tool.cpp  VCFX_diff_tool.h
src/VCFX_distance_calculator/: CMakeLists.txt  VCFX_distance_calculator.cpp  VCFX_distance_calculator.h
src/VCFX_dosage_calculator/: CMakeLists.txt  VCFX_dosage_calculator.cpp  VCFX_dosage_calculator.h
src/VCFX_duplicate_remover/: CMakeLists.txt  VCFX_duplicate_remover.cpp  VCFX_duplicate_remover.h
src/VCFX_fasta_converter/: CMakeLists.txt  VCFX_fasta_converter.cpp  VCFX_fasta_converter.h
src/VCFX_field_extractor/: CMakeLists.txt  VCFX_field_extractor.cpp  VCFX_field_extractor.h
src/VCFX_file_splitter/: CMakeLists.txt  VCFX_file_splitter.cpp  VCFX_file_splitter.h
src/VCFX_format_converter/: CMakeLists.txt  VCFX_format_converter.cpp  VCFX_format_converter.h
src/VCFX_genotype_query/: CMakeLists.txt  VCFX_genotype_query.cpp  VCFX_genotype_query.h
src/VCFX_gl_filter/: CMakeLists.txt  VCFX_gl_filter.cpp  VCFX_gl_filter.h
src/VCFX_haplotype_extractor/: CMakeLists.txt  VCFX_haplotype_extractor.cpp  VCFX_haplotype_extractor.h
src/VCFX_haplotype_phaser/: CMakeLists.txt  VCFX_haplotype_phaser.cpp  VCFX_haplotype_phaser.h
src/VCFX_header_parser/: CMakeLists.txt  VCFX_header_parser.cpp  VCFX_header_parser.h
src/VCFX_hwe_tester/: CMakeLists.txt  VCFX_hwe_tester.cpp  VCFX_hwe_tester.h
src/VCFX_impact_filter/: CMakeLists.txt  VCFX_impact_filter.cpp  VCFX_impact_filter.h
src/VCFX_inbreeding_calculator/: CMakeLists.txt  VCFX_inbreeding_calculator.cpp  VCFX_inbreeding_calculator.h
src/VCFX_indel_normalizer/: CMakeLists.txt  VCFX_indel_normalizer.cpp  VCFX_indel_normalizer.h
src/VCFX_indexer/: CMakeLists.txt  VCFX_indexer.cpp  VCFX_indexer.h
src/VCFX_info_aggregator/: CMakeLists.txt  VCFX_info_aggregator.cpp  VCFX_info_aggregator.h
src/VCFX_info_parser/: CMakeLists.txt  VCFX_info_parser.cpp  VCFX_info_parser.h
src/VCFX_info_summarizer/: CMakeLists.txt  VCFX_info_summarizer.cpp  VCFX_info_summarizer.h
src/VCFX_ld_calculator/: CMakeLists.txt  VCFX_ld_calculator.cpp  VCFX_ld_calculator.h
src/VCFX_merger/: CMakeLists.txt  VCFX_merger.cpp  VCFX_merger.h
src/VCFX_metadata_summarizer/: CMakeLists.txt  VCFX_metadata_summarizer.cpp  VCFX_metadata_summarizer.h
src/VCFX_missing_data_handler/: CMakeLists.txt  VCFX_missing_data_handler.cpp  VCFX_missing_data_handler.h
src/VCFX_missing_detector/: CMakeLists.txt  VCFX_missing_detector.cpp  VCFX_missing_detector.h
src/VCFX_multiallelic_splitter/: CMakeLists.txt  VCFX_multiallelic_splitter.cpp  VCFX_multiallelic_splitter.h
src/VCFX_nonref_filter/: CMakeLists.txt  VCFX_nonref_filter.cpp  VCFX_nonref_filter.h
src/VCFX_outlier_detector/: CMakeLists.txt  VCFX_outlier_detector.cpp  VCFX_outlier_detector.h
src/VCFX_phase_checker/: CMakeLists.txt  VCFX_phase_checker.cpp  VCFX_phase_checker.h
src/VCFX_phase_quality_filter/: CMakeLists.txt  VCFX_phase_quality_filter.cpp  VCFX_phase_quality_filter.h
src/VCFX_phred_filter/: CMakeLists.txt  (+2 more)
tests/: CMakeLists.txt  VCFX_field_extractor_test.cpp  VCFX_header_parser_test.cpp  VCFX_record_filter_test.cpp  VCFX_sample_extractor_test.cpp  VCFX_variant_counter_test.cpp  test_af_subsetter.sh  test_alignment_checker.sh  test_all.sh  test_allele_balance_calc.sh  test_allele_balance_filter.sh  test_allele_counter.sh  test_allele_freq_calc.sh  test_ancestry_assigner.sh  test_ancestry_inferrer.sh  test_annotation_extractor.sh  test_available_tools_fallback.sh  test_basic.cpp  test_compressor.sh  test_concordance_checker.sh  test_cross_sample_concordance.sh  test_custom_annotator.sh  test_diff_tool.sh  test_distance_calculator.sh  test_doc_lookup.sh  test_docker.sh  test_dosage_calculator.sh  test_duplicate_remover.sh  test_fasta_converter.sh  test_field_extractor.sh  test_file_splitter.sh  test_format_converter.sh  test_genotype_query.sh  test_gl_filter.sh  test_haplotype_extractor.sh  test_haplotype_phaser.sh  test_header_parser.sh  test_hwe_tester.sh  test_impact_filter.sh  test_inbreeding_calculator.sh  (+38 more)
(+985 files in other folders)
