[build-system]
requires = ["setuptools>=61", "cmake"]
build-backend = "setuptools.build_meta"

[project]
name = "vcfx"
version = "1.0.2"
description = "Python bindings for the VCFX toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Jorge Miguel Silva" },
    { name = "José Luis Oliveira" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]

[tool.setuptools.package-data]
"vcfx" = ["py.typed"]
