cmake_minimum_required(VERSION 3.10)

# Core library with ARM optimizations
add_library(vcfx_core vcfx_core.cpp)

if(CMAKE_SYSTEM_PROCESSOR MATCHES "arm|aarch")
    target_compile_options(vcfx_core PRIVATE -mcpu=native -O3)
endif()

# Add all tool subdirectories
add_subdirectory(VCFX_header_parser)
add_subdirectory(VCFX_record_filter)
add_subdirectory(VCFX_field_extractor)
add_subdirectory(VCFX_format_converter)
add_subdirectory(VCFX_variant_counter)
add_subdirectory(VCFX_sample_extractor)
add_subdirectory(VCFX_sorter)
add_subdirectory(VCFX_validator)
add_subdirectory(VCFX_subsampler)
add_subdirectory(VCFX_genotype_query)
add_subdirectory(VCFX_allele_freq_calc)
add_subdirectory(VCFX_indexer)
add_subdirectory(VCFX_compressor)
add_subdirectory(VCFX_position_subsetter)
add_subdirectory(VCFX_haplotype_extractor)
add_subdirectory(VCFX_info_parser)
add_subdirectory(VCFX_variant_classifier)
add_subdirectory(VCFX_duplicate_remover)
add_subdirectory(VCFX_info_summarizer)
add_subdirectory(VCFX_distance_calculator)
add_subdirectory(VCFX_multiallelic_splitter)
add_subdirectory(VCFX_missing_data_handler)
add_subdirectory(VCFX_concordance_checker)
add_subdirectory(VCFX_allele_balance_calc)
add_subdirectory(VCFX_allele_counter)
add_subdirectory(VCFX_phase_checker)
add_subdirectory(VCFX_annotation_extractor)
add_subdirectory(VCFX_phred_filter)
add_subdirectory(VCFX_merger)
add_subdirectory(VCFX_metadata_summarizer)
add_subdirectory(VCFX_hwe_tester)
add_subdirectory(VCFX_fasta_converter)
add_subdirectory(VCFX_nonref_filter)
add_subdirectory(VCFX_dosage_calculator)
add_subdirectory(VCFX_population_filter)
add_subdirectory(VCFX_file_splitter)
add_subdirectory(VCFX_gl_filter)
add_subdirectory(VCFX_ref_comparator)
add_subdirectory(VCFX_ancestry_inferrer)
add_subdirectory(VCFX_impact_filter)
add_subdirectory(VCFX_info_aggregator)
add_subdirectory(VCFX_probability_filter)
add_subdirectory(VCFX_diff_tool)
add_subdirectory(VCFX_cross_sample_concordance)
add_subdirectory(VCFX_phase_quality_filter)
add_subdirectory(VCFX_indel_normalizer)
add_subdirectory(VCFX_custom_annotator)
add_subdirectory(VCFX_region_subsampler)
add_subdirectory(VCFX_allele_balance_filter)
add_subdirectory(VCFX_missing_detector)
add_subdirectory(VCFX_haplotype_phaser)
add_subdirectory(VCFX_af_subsetter)
add_subdirectory(VCFX_sv_handler)
add_subdirectory(VCFX_reformatter)
add_subdirectory(VCFX_quality_adjuster)
add_subdirectory(VCFX_inbreeding_calculator)
add_subdirectory(VCFX_outlier_detector)
add_subdirectory(VCFX_alignment_checker)
add_subdirectory(VCFX_ancestry_assigner)
add_subdirectory(VCFX_ld_calculator)